# feox-vector

./: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: vector.rs
examples/: basic_usage.rs
src/: ann.rs  codec.rs  filter.rs  keys.rs  lib.rs  model.rs  storage.rs  store.rs  validation.rs
src/tests/: filter_tests.rs  mod.rs  store_tests.rs
